style : fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   background-color: var(--primary);
   width: 100vw;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 .navig {
